--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <h1></h1>
     </header>
     <main class="container">
-        <button onclick="" class="button">Console</button>
-        <button onclick="" class="button">Alert</button>
-        <button onclick="" class="button">Prompt</button>
-        <button onclick="" class="button">Suma</button>
+        <button onclick="intentoConsole();" class="button">Console</button>
+        <button onclick="intentoAlert();" class="button">Alert</button>
+        <button onclick="intentoPrompt();" class="button">Prompt</button>
+        <button onclick="intentoSuma();" class="button">Suma</button>
     </main>
-
-      <script src="app.js"></script>
+    
+    <script src="app.js"></script>
 </body>
 </html>
